# api-tui

./: .gitattributes  .gitignore  Cargo.toml  README.md  apitester-cli-plan-v2.md
.github/workflows/: ci.yml
collections/: example.toml
src/: config.rs  cookies.rs  error.rs  headless.rs  history.rs  lib.rs  main.rs  paths.rs  run.rs  tui.rs
src/app/: event.rs  input.rs  mod.rs
src/collection/: build.rs  interpolate.rs  mod.rs  model.rs
src/http/: mod.rs  response.rs
src/ui/: collection_panel.rs  confirm_modal.rs  header.rs  help_modal.rs  highlight.rs  history_modal.rs  mod.rs  request_panel.rs  response_panel.rs  status_bar.rs  style.rs
tests/: collection_load.rs  cookies.rs  headless.rs  http_send.rs
tools/: make_manual.py
