[package]
name = "apitester"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Interactive TUI for HTTP API testing"
license = "MIT"

[dependencies]
ratatui      = "0.28"
crossterm    = "0.28"
tui-textarea = "0.6"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
syntect      = { version = "5", default-features = false, features = ["default-fancy"] }
thiserror    = "1"
anyhow       = "1"
directories  = "5"
arboard      = { version = "3", default-features = false }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock   = "0.6"
insta      = "1"
assert_cmd = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
